UP:  sec-result, sec-step-4(up)
Закончена верстка секции "шаг 4"
Начата секция "Результат"

--- a/index.html
+++ b/index.html
@@ -680,6 +680,23 @@
 
 	</section>
 
+	<section class="sec-result">
+
+		<div class="container sec-result__container">
+
+			<h2 class="h2-title sec-result__h2-title">Результат</h2>
+			
+			<p class="inner-head-img__title">Главная страница</p>
+			
+			<div class="sec-result__inner-head-img">
+				<img src="img/sec-result/sec-result__img-under.jpg" alt="Результат" class="inner-head-img__img-after">
+				<img src="img/sec-result/sec-result__img-first.jpg" alt="Результат" class="inner-head-img__img-before">
+			</div>
+
+		</div>
+
+	</section>
+
 	<footer id="footer" class="footer">
 
 		<div class="container two-cont">
