--- a/index.html
+++ b/index.html
@@ -906,6 +906,96 @@
 
 	</section>
 
+	<section class="sec-why-we">
+
+		<div class="container sec-why-we__container">
+
+			<h2 class="h2-title sec-why-we__h2-title">Почему именно мы?</h2>
+
+			<div class="sec-why-we__inner-achievements">
+
+				<div class="sec-why-we__achievements-block achievements-block__bg-color-browser">
+					<div class="achievements-block__icon achievements-block__icon-browser"></div>
+					<span class="achievements-block__text-bold">+500</span>
+					<p class="achievements-block__text">внедренных сайтов</p>
+				</div>
+
+				<div class="sec-why-we__achievements-block achievements-block__bg-color-dev">
+					<div class="achievements-block__icon achievements-block__icon-dev"></div>
+					<span class="achievements-block__text-bold">+200</span>
+					<p class="achievements-block__text">разработанных интернет-магазинов</p>
+				</div>
+
+				<div class="sec-why-we__achievements-block achievements-block__bg-color-graph">
+					<div class="achievements-block__icon achievements-block__icon-graph"></div>
+					<span class="achievements-block__text-bold">9 лет</span>
+					<p class="achievements-block__text">на рынке</p>
+				</div>
+
+				<div class="sec-why-we__achievements-block achievements-block__bg-color-1c">
+					<div class="achievements-block__overlay-1c"></div>
+					<div class="achievements-block__icon achievements-block__icon-1c"></div>
+					<span class="achievements-block__text-bold">8</span>
+					<p class="achievements-block__text">сертифицированных специалистов 1С-Битрикс</p>
+				</div>
+
+			</div>
+
+			<div class="sec-why-we__inner-advantages">
+
+				<div class="sec-why-we__advantage-block">
+					<div class="advantage-block__img advantage-block__img-experts"></div>
+					<h4 class="advantage-block__title">Сертифицированные специалисты</h4>
+					<p class="advantage-block__text">
+						В нашей команде работают сертифицированные программисты 1С-Битрикс. За 9 лет работы на digital-рынке мы реализовали большое количество проектов на готовых решениях, поэтому рабочий процесс у нас отлажен до мелочей. Кроме того, все сотрудники работают в офисе и любые возникающие вопросы решаются внутри команды в кратчайшие сроки.
+					</p>
+				</div>
+
+				<div class="sec-why-we__advantage-block">
+					<div class="advantage-block__img advantage-block__img-approach"></div>
+					<h4 class="advantage-block__title">Комплексный подход</h4>
+					<p class="advantage-block__text">
+						Мы не просто разрабатываем сайты - мы оказываем полный спектр услуг, чтобы помочь вашему бизнесу стать лидером в интернет-пространстве. Мы проводим сквозную аналитику, занимаемся поисковым продвижением по всем регионам России и СНГ, запускаем и ведем контекстную рекламу и таргетированную рекламу в соцсетях, на Youtube, внедряем CRM и оказываем техническую поддержку сайта.
+					</p>
+				</div>
+
+				<div class="sec-why-we__advantage-block">
+					<div class="advantage-block__img advantage-block__img-nation"></div>
+					<h4 class="advantage-block__title">Мультирегиональность</h4>
+					<p class="advantage-block__text">
+						Наш штат находится в самарском офисе, а наши клиенты - по всей России. Мы сотрудничаем с компаниями из Москвы, Санкт-Петербурга, Сочи, Краснодара, Новосибирска, Магнитогорска, …
+						Переговоры и решение всех задач осуществляются через любой удобный канал связи: е-mail, телефон, скайп, мессенджеры.
+					</p>
+				</div>
+
+			</div>
+
+		</div>
+	
+	</section>
+
+	<section class="sec-add-info">
+
+			<div class="container sec-add-info__container">
+
+				<h3 class="sec-add-info__title">Дополнительная информация:</h3>
+
+				<p class="sec-add-info__text">Посмотреть варианты готовых решений можно здесь:
+					<a class="sec-add-info__link" href="#!"> https://marketplace.1c-bitrix.ru/</a>
+				</p>
+
+				<p class="sec-add-info__text">Посмотреть наше портфолио можно здесь:
+					<a class="sec-add-info__link" href="#!">//relevant.ru/portfolio/</a>
+				</p>
+
+				<p class="sec-add-info__text">Ознакомиться с полным перечнем услуг можно здесь:
+					<a class="sec-add-info__link" href="#!">https://relevant.ru/serv/</a>
+				</p>
+
+		</div>
+
+	</section>
+
 	<footer id="footer" class="footer">
 
 		<div class="container two-cont">
