UP: адаптив (частично)

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
 					<h3 class="h3-title sec-functional__h3-title shop-inner__h3-title">Интернет-магазин</h3>
 
 					<div class="sec-functional__tag-inner shop-inner__tag-inner">
-						<span class="sec-functional__tag">Удобный каталог</span>
-						<span class="sec-functional__tag">Умный фильтр</span>
-						<span class="sec-functional__tag">Карточки товаров</span>
-						<span class="sec-functional__tag">Корзина</span>
-						<span class="sec-functional__tag">Онлайн-консультант</span>
-						<span class="sec-functional__tag">Интеграция с системой учета</span>
-						<span class="sec-functional__tag">Интеграция с CRM</span>
+						<span class="sec-functional__tag tag__shop">Удобный каталог</span>
+						<span class="sec-functional__tag tag__shop">Умный фильтр</span>
+						<span class="sec-functional__tag tag__shop">Карточки товаров</span>
+						<span class="sec-functional__tag tag__shop">Корзина</span>
+						<span class="sec-functional__tag tag__shop">Онлайн-консультант</span>
+						<span class="sec-functional__tag tag__shop">Интеграция с системой учета</span>
+						<span class="sec-functional__tag tag__shop">Интеграция с CRM</span>
 					</div>
 
 					<p class="sec-functional__p-text shop-inner__p-text">
@@ -199,15 +199,15 @@
 					<h3 class="h3-title sec-functional__h3-title corp-inner__h3-title">Корпоративный сайт</h3>
 
 					<div class="sec-functional__tag-inner corp-inner__tag-inner">
-						<span class="sec-functional__tag">О компании</span>
-						<span class="sec-functional__tag">Продукция</span>
-						<span class="sec-functional__tag">Партнеры</span>
-						<span class="sec-functional__tag">Интеграция с CRM</span>
-						<span class="sec-functional__tag">Сертификаты</span>
-						<span class="sec-functional__tag">Отзывы</span>
-						<span class="sec-functional__tag">Новости</span>
-						<span class="sec-functional__tag">Услуги</span>
-						<span class="sec-functional__tag">Контакты</span>
+						<span class="sec-functional__tag tag__corp">О компании</span>
+						<span class="sec-functional__tag tag__corp">Продукция</span>
+						<span class="sec-functional__tag tag__corp">Партнеры</span>
+						<span class="sec-functional__tag tag__corp">Интеграция с CRM</span>
+						<span class="sec-functional__tag tag__corp">Сертификаты</span>
+						<span class="sec-functional__tag tag__corp">Отзывы</span>
+						<span class="sec-functional__tag tag__corp">Новости</span>
+						<span class="sec-functional__tag tag__corp">Услуги</span>
+						<span class="sec-functional__tag tag__corp">Контакты</span>
 					</div>
 
 					<p class="sec-functional__p-text corp-inner__p-text">
@@ -234,13 +234,13 @@
 					<h3 class="h3-title sec-functional__h3-title catalog-inner__h3-title">Сайт-каталог</h3>
 
 					<div class="sec-functional__tag-inner catalog-inner__tag-inner">
-						<span class="sec-functional__tag">Формы обратной связи</span>
-						<span class="sec-functional__tag">Умный фильтр</span>
-						<span class="sec-functional__tag">Карточки товаров</span>
-						<span class="sec-functional__tag">Корзина</span>
-						<span class="sec-functional__tag">Спецпредложения</span>
-						<span class="sec-functional__tag">Расширенный каталог</span>
-						<span class="sec-functional__tag">Обратный звонок</span>
+						<span class="sec-functional__tag tag__catalog">Формы обратной связи</span>
+						<span class="sec-functional__tag tag__catalog">Умный фильтр</span>
+						<span class="sec-functional__tag tag__catalog">Карточки товаров</span>
+						<span class="sec-functional__tag tag__catalog">Корзина</span>
+						<span class="sec-functional__tag tag__catalog">Спецпредложения</span>
+						<span class="sec-functional__tag tag__catalog">Расширенный каталог</span>
+						<span class="sec-functional__tag tag__catalog">Обратный звонок</span>
 					</div>
 
 					<p class="sec-functional__p-text catalog-inner__p-text">
@@ -700,11 +700,10 @@
 			</div>
 
 			<p class="p-text sec-result__slider-title">Каталог Аспро</p>
-
 			
 			<div class="sec-result__text-catalog-inner sec-result__text-catalog-inner_left">
 
-				<p class="p-text slider-catalog-inner__title">Каталог</p>
+				<p class="p-text slider-catalog-inner__title slider-catalog-inner__title_right">Каталог</p>
 
 				<div class="owl-carousel sec-result__slider-catalog-inner">
 
