UP: адаптив завершен
До width 320px окна браузера.

--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
 				</p>
 
 				<p class="sec-add-info__text">Посмотреть наше портфолио можно здесь:
-					<a class="sec-add-info__link" href="#!">//relevant.ru/portfolio/</a>
+					<a class="sec-add-info__link" href="#!">https://relevant.ru/portfolio/</a>
 				</p>
 
 				<p class="sec-add-info__text">Ознакомиться с полным перечнем услуг можно здесь:
